--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link href="style.css" rel="stylesheet" type="text/css" />
   <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
   </head>
-  <script type="module" src="./script.js"></script>
+  <script src="./script.js"></script>
   <body>
     <header> <strong>Welcome to My Site</strong>     </header>
 <div id="nav-placeholder">
@@ -22,7 +22,7 @@
 </script>
 <footer class = "footer"><p id = "credit" style="font: 10px Papyrus, Sans-Serif;"> *This website was developed following <span style = "color: red;"> 50 </span> hours shadowing with<strong><a href="https://www.stihlusa.com" target= "blank" rel = "noopener noreferrer"> STIHL Inc. </a></strong>* <br><br> Website was developed using Replit.</p></footer>
   <div class = "opener">
-  <p style = "font: 20px 'Times New Roman', Times, serif">Manufacturing and industry is a scarcely covered topic in schools across the nation, even though they involves a multitude of engineering diciplines.<br><br> Using this website, explore the numerous facets of manufacturing, with examples and visual cues to reinforce your understanding.  </p>
+  <p style = "font: 20px 'Times New Roman', Times, serif">Manufacturing and industry are scarcely covered topics in schools across the nation, even though they involve a multitude of engineering diciplines.<br><br> Using this website, explore the numerous facets of manufacturing, with examples and visual cues to reinforce your understanding.  </p>
   <img src = "https://www.slashgear.com/img/gallery/everything-to-know-about-the-stihl-ms-170-chainsaw-before-you-buy/intro-1711470037.jpg" alt = "picture of the STIHL MS 170 chainsaw." width = 500px height = 700px/>
   </div>
     <hr>
