--- a/about.html
+++ b/about.html
@@ -39,8 +39,19 @@
         </ul></li>
         <li> Brainstorm —<br> Think of any possible solutions; do <u> NOT</u> overlook alternatives.</li>
         <li> Background Research — <br> Engage and learn from others, look at previous solutions, and perform research on users or customers. </li>
-      </ol>
+        <li> Plan — <br> Choose the best solution by observing which solution meets your design requirements.</li>
+        <li> Develop — <br> Revise and improve your solution and make a prototype which will guide your progress.</li>
+        <li> Test — <br> Test your prototype and refine it based on the results. This involves multiple iterations and <br> will require problem-solving before arriving to a final design</li>
+        <li> Communicate — <br> Present your final design to others and explain your design process by providing documentation <br> (i.e. a presentation, a report, or a display board). </li>
+      </ol> </p>
     </div> <br> <br>
-    <div><h2></h2>
+    <div><h2> Automation Design & Planning </h2>
+      <p> Automations, while easy to use and observe, sustain a very complex development process, where there are a large number of variables thought of before modeling even begins. There are many parts which go into consideration when designing an automation, including the acquisition of parts, the synergy of all parts, and the wiring and networking of each component. Also included in design and planning are schematics, scale drawings, physical measurements, failure analysis *(FMEA), wiring diagrams, effectiveness, flexibility, maintenance, safety standards, and many more specifics. <br> <br>  *Standing for "Failure Mode and Effects Analysis”, FMEA is a strategy used to identify potential problems and situations which would compromise the effectiveness or safety of a product or process.</p>
+      <br> <br>
+      <div><h2> Subtractive v. Additive Manufacturing </h2>
+        <p> Subtractive manufacturing is a process where material is removed from a workpiece (usually a solid block) to create a desired shape.<div>Characteristics:</div><ul> <li> Produces material waste </li> <li> Creates parts with complex geometries and tight tolerances (little to no variation/deviation from original design) </li> <li> Works well with several materials, including metals, plastics, wood, composites, and ceramics </li> <li> Utilizes cutting tools such as mills, lathes, and drills, which may need maintence and replacements over time</li> <li> Provides a limited selection of shapes and formations depending on the tools available</li>
+        </ul></p> </div> <br>
+        <div><p> Additive manufacturing is a process where material is added layer by layer to create a desired shape. The most common examples are 3D printing and jetting.</p> <div>Characteristics:</div><ul> <li> Produces little to no material waste by depositing selected material</li> <li> Allows for design freedom and complex geometries normally impossible using traditional methods</li> <li> Works well with several materials similar to subtractive manufacturing, but can be extended to biological materials.</li> <li> Designs normally originate from a digital 3D model from CAD software</li> <li> Post-processing is often required (regarding 3D printing, you may require support removal, sanding, or heat treatment)</li>
+      
     
   </body>
