--- a/quizzes.html
+++ b/quizzes.html
@@ -23,4 +23,8 @@
     $("#nav-placeholder").load("nav.html");
   });
   </script>
+  <footer style = "opacity: 1;" class = "footer"><p id = "credit" style="font: 10px Papyrus, Sans-Serif;"> *This website was developed following <span style = "color: red;"> 50 </span> hours shadowing with<strong><a href="https://www.stihlusa.com" target= "blank" rel = "noopener noreferrer"> STIHL Inc. </a></strong>* <br><br> Website was developed using Replit.</p></footer>
+  <h2> Entrance Quiz</h2> <button onclick="window.open('https://forms.gle/EQvR8NzsufKqHmea6', '_blank');"> CLICK HERE </button> <br> <br>
+  <h2> Exit Quiz</h2> <button onclick="window.open('https://forms.gle/yLopN6LBqdgVT1Je9', '_blank');"> CLICK HERE </button> <br> <br>
+  <h2> Exit Survey</h2> <button onclick="window.open('https://forms.gle/QpX1LqMZ2THH7aH49', '_blank');"> CLICK HERE </button>
 </body>
