--- a/downloads.html
+++ b/downloads.html
@@ -31,7 +31,9 @@
     camera-controls
     auto-rotate
     ar
-    style="width: 100%; height: 500px;"
+    style="width: 100%; height: 200px;"
   ></model-viewer>
+  <cite>3dscan Stihl ms660 chainsaw cylinder
+[Chainsaw Engine Cylinder].Valery Rutkovskiy. (2021). [Source: https://grabcad.com/library/3dscan-stihl-ms660-chainsaw-cylinder-1].</cite>
 
 </body>
