--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>replit</title>
-  <link href="style.css" rel="stylesheet" type="text/css" />
-  <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
-  </head>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/loaders/GLTFLoader.js"></script>
   <script src="./script.js"></script>
   <body>
     <header> <strong>Welcome to My Site</strong>     </header>
